[gd_scene load_steps=8 format=3 uid="uid://o4weq2f455gr"]

[ext_resource type="Script" path="res://scenes/cards/kindle_wall.gd" id="1_0p7be"]
[ext_resource type="Texture2D" uid="uid://bo1dxr002sqi0" path="res://graphics/projectiles/Kindle Wall.png" id="1_h7wqo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2kexc"]
atlas = ExtResource("1_h7wqo")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o03wc"]
atlas = ExtResource("1_h7wqo")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yeoa2"]
atlas = ExtResource("1_h7wqo")
region = Rect2(64, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_fqx7y"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2kexc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o03wc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yeoa2")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_mosu3"]
radius = 3.71429
height = 31.4286

[node name="KindleWall" type="Area2D"]
texture_filter = 1
scale = Vector2(5, 5)
collision_layer = 32
collision_mask = 3
script = ExtResource("1_0p7be")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_fqx7y")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.857143, 0.571429)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_mosu3")

[node name="spellDuration" type="Timer" parent="."]
wait_time = 5.0

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="spellDuration" to="." method="_on_spell_duration_timeout"]
